# hello-bazel

./: WORKSPACE.bazel  flake.nix
lib/math/: BUILD.bazel  add_test.cc  sub_test.cc
