cc_library(
    name = "add",
    srcs = ["add.c"],
    hdrs = ["add.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "add_test",
    size = "small",
    srcs = ["add_test.cc"],
    deps = [
        ":add",
        "@gtest//:gtest_main",
    ],
)

cc_library(
    name = "sub",
    srcs = ["sub.c"],
    hdrs = ["sub.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "sub_test",
    size = "small",
    srcs = ["sub_test.cc"],
    deps = [
        ":sub",
        "@gtest//:gtest_main",
    ],
)
